--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "vercel dev"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.5.0"
+    "@google/generative-ai": "^0.5.0",
+    "axios": "^1.11.0"
   }
 }
